extractor/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extractor
  namespace: extractor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extractor
  template:
    metadata:
      labels:
        app: extractor
    spec:
      containers:
        - name: extractor
          image: ghcr.io/40docs/pptx_extractor:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
