extractor/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: extractor
  namespace: extractor  # Add this line to ensure the service is created in the correct namespace
spec:
  selector:
    app: extractor
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 5000
  type: NodePort
