extractor/Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: extractor
  namespace: extractor
  annotations: {
    fortiweb-ip: "10.0.0.4",
    fortiweb-login: "fortiweb-login-secret",
    fortiweb-port: "443",
    fortiweb-ctrl-log: "disable",
    virtual-server-ip: "10.0.0.10",
    virtual-server-addr-type: "ipv4",
    virtual-server-interface: "port1",
    server-policy-web-protection-profile: "Inline Standard Protection",
    server-policy-https-service: "HTTPS",
    server-policy-http-service: "HTTP",
    server-policy-syn-cookie: "enable",
    server-policy-http-to-https: "disable",
    server-policy-intermediate-certificate-group: "extractor_extractor_ca-group"
  }
spec:
  ingressClassName: fwb-ingress-controller
  tls:
    - secretName: extractor-tls
      hosts:
        - extractor.40docs.com
  rules:
    - host: extractor.40docs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: extractor
                port:
                  number: 5000
